# pointsyeah-cli

./: LICENSE  README.md  SKILL.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml  publish-clawhub.yml
pointsyeah_cli/: cli.py  urlgen.py
tests/: test_urlgen.py
