[project]
name = "pointsyeah-cli"
version = "0.1.0"
description = "CLI to generate PointsYeah search URLs for flights and hotels"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ivan Chen" }]
license = { text = "MIT" }
keywords = ["points", "travel", "flights", "hotels", "pointsyeah"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
pointsyeah = "pointsyeah_cli.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"
